Correction contrast v2

--- a/style.css
+++ b/style.css
@@ -575,11 +575,11 @@ img.img-responsive.portfolio-thumb {
     background-color:#F3976C
 }
 .tc-white {
-    color:#F3976C!important
+    color:#F3976C!important;
 }
 .btn-atomic-tangerine {
     background:#F3976C;
-    color:#FFFFFF!important
+    color:rgb(60, 60, 60)!important;
 }
 .btn-atomic-tangerine:hover {
     background:#c27956!important;
